turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:8: error: not found: type Red
	setCouleur(couleur: Red)
                            ^Source:14: error: not found: type Yellow
	setCouleur(couleur: Yellow)
                            ^Source:20: error: not found: type Pink
	setCouleur(couleur: Pink)
                            ^